@@ -1,3 +1,8 @@
+Mon Dec 23 16:58:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2974
+
 Sun Dec 22 16:28:26 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	current-trunk:
